changement design, commentaires controller, ajout texte

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -3,8 +3,8 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <link href="https://fonts.googleapis.com/css?family=Barrio|Oswald" rel="stylesheet">
-
+        <link href="https://fonts.googleapis.com/css?family=Barrio|Oswald|Vibur" rel="stylesheet">
+        
         <title>{% block title %}Le jeu de loi érudit{% endblock %}</title>
         {% block stylesheets %}
             <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
