--- a/src/UserBundle/Resources/views/Gamer/select_gamer.html.twig
+++ b/src/UserBundle/Resources/views/Gamer/select_gamer.html.twig
@@ -57,7 +57,7 @@
 
       </div>
     </div>
-    <div class="alert alert-warning info-questions">
+    <div class="alert alert-warning alert-info-questions">
       <h4><strong>Attention</strong></h4>
       <p>Pour garantir le bon déroulement du jeu, il doit y avoir suffisamment de questions.</p>
       <p>Dans l'idéal, pour une matière, il devrait y avoir au moins 10 questions par niveau scolaire.</p><br/>
