fusion suggest question et add question

--- a/src/UserBundle/Resources/views/Gamer/admin_gamers.html.twig
+++ b/src/UserBundle/Resources/views/Gamer/admin_gamers.html.twig
@@ -47,7 +47,7 @@
                   <td>{{ gamer.role }}</td>
                   <td>{{ gamer.schoolClass.schoolClass }}</th>
                   <td>{{ gamer.bestScore }}</td>
-                  <td>{{ gamer.gameWonNb }}</td>
+                  <td>{{ gamer.gameWonNb }} / {{ gamer.gamePlayedNb }} </td>
                   <td>{{ gamer.rightAnswerNb }}</td>
                   <td>{{ gamer.level }}</td>
                   <td><a href="{{ path('edit_gamer', { 'id': gamer.id }) }}"><span class="glyphicon glyphicon-wrench"></span></a></td>
