--- a/src/UserBundle/Resources/views/Gamer/list_scores.html.twig
+++ b/src/UserBundle/Resources/views/Gamer/list_scores.html.twig
@@ -65,7 +65,7 @@
                   <td>{{ myGamer.firstname }}</td>
                   <td>{{ myGamer.usercount.username }}</td>
                   <td>{{ myGamer.bestScore }}</td>
-                  <td>{{ myGamer.gameWonNb }}</td>
+                  <td>{{ myGamer.gameWonNb }} / {{ myGamer.gamePlayedNb }}</td>
                   <td>{{ myGamer.rightAnswerNb }}</td>
                   <td>{{ myGamer.level }}</td>
                 </tr>
@@ -103,7 +103,7 @@
                   <td>{{ gamer.firstname }}</td>
                   <td>{{ gamer.usercount.username }}</td>
                   <td>{{ gamer.bestScore }}</td>
-                  <td>{{ gamer.gameWonNb }}</td>
+                  <td>{{ gamer.gameWonNb }} / {{ gamer.gamePlayedNb }}</td>
                   <td>{{ gamer.rightAnswerNb }}</td>
                   <td>{{ gamer.level }}</td>
                 </tr>
@@ -137,7 +137,7 @@
                     <td>{{ gamer.firstname }}</td>
                     <td>{{ gamer.usercount.username }}</td>
                     <td>{{ gamer.bestScore }}</td>
-                    <td>{{ gamer.gameWonNb }}</td>
+                    <td>{{ gamer.gameWonNb }} / {{ gamer.gamePlayedNb }}</td>
                     <td>{{ gamer.rightAnswerNb }}</td>
                     <td>{{ gamer.level }}</td>
                   </tr>
@@ -173,7 +173,7 @@
                   <td>{{ otherGamer.usercount.username }}</td>
                   <td>{{ otherGamer.role }}</td>
                   <td>{{ otherGamer.bestScore }}</td>
-                  <td>{{ otherGamer.gameWonNb }}</td>
+                  <td>{{ otherGamer.gameWonNb }} / {{ otherGamer.gamePlayedNb }}</td>
                   <td>{{ otherGamer.rightAnswerNb }}</td>
                   <td>{{ otherGamer.level }}</td>
                 </tr>
