ménage, + tentative mise en service de statsQuestion

--- a/src/UserBundle/Resources/views/Gamer/list_scores.html.twig
+++ b/src/UserBundle/Resources/views/Gamer/list_scores.html.twig
@@ -3,7 +3,7 @@
 {% extends "GameBundle::layout.html.twig" %}
 {% set listScores = true %}
 
-{% block title %}{{ parent() }} - {{ titleTab }}{% endblock %}
+{% block title %}{{ parent() }} - Scores{% endblock %}
 
 {% block body %}
   <div class="container-fluid">
@@ -19,7 +19,7 @@
       </div>
     {% endfor %}
 
-    <h3> {{ title }} </h3>
+    <h3> Scores et classements </h3>
 
     <div class="row">
       <div class="col-sm-offset-2 col-sm-8" >
