--- a/src/GameBundle/Resources/views/layout.html.twig
+++ b/src/GameBundle/Resources/views/layout.html.twig
@@ -2,6 +2,6 @@
 
 {% extends "::base.html.twig" %}
 
-{% block title %}{{ parent() }} - Game{% endblock %}
+{% block title %}{{ parent() }}{% endblock %}
 
 {% block sousbody %}{% endblock %}
