--- a/src/UserBundle/Resources/views/Default/index.html.twig
+++ b/src/UserBundle/Resources/views/Default/index.html.twig
@@ -2,7 +2,7 @@
 
 {% extends "UserBundle::layout.html.twig" %}
 
-{% block title %}{{ parent() }} - Index{% endblock %}
+{% block title %}{{ parent() }}{% endblock %}
 
 {% block body %}
     {% for message in app.session.flashbag.get('notice') %}
