--- a/src/UserBundle/Resources/views/layout.html.twig
+++ b/src/UserBundle/Resources/views/layout.html.twig
@@ -2,7 +2,7 @@
 
 {% extends "::base.html.twig" %}
 
-{% block title %}{{ parent() }} - User{% endblock %}
+{% block title %}{{ parent() }}{% endblock %}
 
 {% block body %}
 
